✨ Refactor HomePage